2018-07-25         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile (CCFLAGS): Add -std=c++11.
	* sed.h: Include <cstdint>.

2018-07-25         Arnold D. Robbins     <arnold@skeeve.com>

	* sed.1: Add definitions for .L and .LR and macros.
	* Makefile: Use $$PATH in case PATH has directories
	with spaces in it.
	* README.md: Updated.

2018-07-24         Russ Cox              <rsc@swtch.com>

	* sed2.cpp: Fix int/pointer size assumptions.

2018-07-24         Russ Cox              <rsc@swtch.com>

	* Makefile: Put . in PATH explicitly for greptest, sedtest.

2018-07-24         Russ Cox              <rsc@swtch.com>

	* re2.cpp (regcomp): Handle [.zero.] and other long
	collating element names.

2018-07-24         Russ Cox              <rsc@swtch.com>

	* re2.cpp (regcomp): Fix parse of x{1,}.

2018-07-24         Russ Cox              <rsc@swtch.com>

	* Fix C++ compiler warnings from Apple clang++.

2018-07-22         Arnold D. Robbins     <arnold@skeeve.com>

	* Rename all *.c files to *.cpp.
	* Makefile: Adjusted accordingly. Add rule for sed0.cpp, use
	CXXFLAGS.
	* README.md: Updated.

2018-07-22         Arnold D. Robbins     <arnold@skeeve.com>

	* testsed.sh: Fix calls to close() in embedded awk program.
	* sed0.c: Remove trailing whitespace from one of the lines.
	* Makefile: Compile sed for debugging.
	* README.md: Updated.

2018-07-20         Arnold D. Robbins     <arnold@skeeve.com>

	Get things to compile without warnings.

	* Makefile (retest): Use ./testre.  Remove all references to
	Dr. McIlroy's private malloc.c. Remove references to array.c.
	* array.h (realloc): Move the definition here from array.c.
	* array.c: Removed, and all references to it removed.
	* grep.c: Include <unistd.h> for declaration of getopt().
	(main): Add type to declaration.
	(getline, execute, doregerror, warn, error): Use const char *
	instead of char *.
	(execute): Call line.bytes() to get the data for printing.
	Fixes a core dump.
	* re.h (Rex::dprint): Use const char *.